# Coyot3pp

./: CMakeLists-coyot3-commons.cmake  CMakeLists.txt  Coyot3ppConfig.cmake  INSTALL_DEPS_DEBIAN.sh  README.md
av/image_content/: CMakeLists-debian.cmake  CMakeLists.txt
av/image_content/doc/: README.md
av/image_content/include/Coyot3pp/Imag3/ImageContent/: ImageContent.hpp  ImageContentComposition.hpp  ImageContentCvVideocap.hpp  ImageContentDisplayImage.hpp  ImageContentImgSequence.hpp  ImageContentQrCode.hpp  ImageContentTestImage.hpp  TextImageContent.hpp  VideoStreamMetadataBand.hpp
av/image_content/src/Coyot3pp/Imag3/: ImageContent.cpp  ImageContentComposition.cpp  ImageContentCvVideocap.cpp  ImageContentDisplayImage.cpp  ImageContentImgSequence.cpp  ImageContentTestImage.cpp
av/rtsp_server/: CMakeLists-debian.cmake  CMakeLists.txt
av/rtsp_server/doc/: README.md
av/rtsp_server/include/Coyot3pp/H264RtspServer/: RtspH264Server.hpp  RtspH264StreamPublisher.hpp  RtspServerConfigObject.hpp  RtspServerModelsCommon.hpp
av/rtsp_server/src/Coyot3pp/H264RtspServer/: VideoStreamMetadataBand.cpp
av/rtsp_server/src/Coyot3pp/H264RtspServer/config/: RtspServerConfigObject.cpp
av/rtsp_server/src/Coyot3pp/H264RtspServer/publisher/: RtspH264StreamPublisher.cpp  RtspH264StreamPublisher_buffer_publisher.cpp  RtspH264StreamPublisher_misc.cpp  RtspH264StreamPublisher_models.cpp  RtspH264StreamPublisher_statics_and_gstcallbacks.cpp
av/rtsp_server/src/Coyot3pp/H264RtspServer/server/: RTSPH264Server_models.cpp  RtspH264Server _statics_and_gstcallbacks.cpp  RtspH264Server.cpp  (+2 more)
bashes/: install_dependences.sh
bashes/gnu/debian/: 10.install_dependences_cor3.sh  20.install_dependences_r3st.sh  30.install_dependences_mqtt.sh  40.install_dependences_postgr3sql.sh  60.install_dependences_imag3.sh  70.install_dependences_h264rtsp.sh  80.install_dependences_lwsserver.sh
bashes/software/opencv/: .gitignore  install.sh  install_manifest_4_9_0.txt
communication/mqtt/: CMakeLists-debian.cmake  CMakeLists.txt  README.md  install_deps_debian.sh
communication/rest_connector/: CMakeLists-debian.cmake  R3stConfig.cmake.in  README.md  install_deps_debian.sh
communication/rest_connector/include/Coyot3pp/R3st/: Client.h
communication/rest_connector/src/Coyot3pp/R3st/: Client.cpp
cor3/: CMakeLists-debian.cmake  CMakeLists.txt  Cor3Config.cmake.in  install_deps_debian.sh
cor3/doc/: README.md  cyt3funcsandclasses.md  cyt3macros.md  cyt3module.md
cor3/doc/graphics/: notas_dev.md
cor3/include/Coyot3pp/Cor3/: Coyot3.hpp  JsonSerializablePacketBase.hpp  ModuleBase.hpp
cor3/include/Coyot3pp/Cor3/base/: JsonSerializablePacketBase.hpp  cyt_complex_tools.hpp  cyt_foreach_macro_helpers.hpp  cyt_geo_tools.hpp  cyt_macro_enum_class.hpp  cyt_macro_model_class.hpp  cyt_macros_model_class_serializable_csv.hpp  cyt_macros_model_class_serializable_json.hpp  cyt_macros_tools.hpp  cyt_simple_logger.hpp  cyt_swiss_knife_tools.hpp  cyt_value.hpp  va_opt.hpp
cor3/include/Coyot3pp/Cor3/diagnostics_book/: DiagnosticsBook.hpp
cor3/include/Coyot3pp/Cor3/dictionnary_codec/: dictionnary_codec.hpp
cor3/include/Coyot3pp/Cor3/module/: LoggerCapability.hpp  ModuleBase.hpp  ModulesController.hpp  RpcCapability.hpp
cor3/src/Coyot3pp/Cor3/base/: JsonSerializablePacketBase.cpp  cyt_complex_tools.cpp  cyt_geo_tools.cpp  cyt_simple_logger.cpp  cyt_swiss_knife_tools.cpp  cyt_value.cpp
cor3/src/Coyot3pp/Cor3/diagnostics_book/: DiagnosticsBook.cpp
cor3/src/Coyot3pp/Cor3/dictionnary_codec/: dictionnary_codec.cpp
cor3/src/Coyot3pp/Cor3/module/: LoggerCapability.cpp  ModuleBase.cpp  RpcCapability.cpp
database/postgresql/: CMakeLists-debian.cmake  CMakeLists.txt  README.md  install_deps_debian.sh
database/postgresql/include/Coyot3pp/Postgr3Sql/: PostgreSqlConnector.hpp
database/postgresql/src/Coyot3pp/Postgr3Sql/: PostgreSqlConnector.cpp
database/qsqlite/: CMakeLists-debian.cmake  CMakeLists.txt
database/qsqlite/doc/: README.md
database/sqlite3/: CMakeLists-debian.cmake  CMakeLists.txt
database/sqlite3/doc/: README.md  error_codes.txt  scrach.cpp
database/sqlite3/src/Coyot3pp/Sqlit3/: Sqlit3Connector.cpp
docs/deprecated/ncurses/: cyt_console_kit.hpp
extended-tools/state-machine/: CMakeLists-debian.cmake  CMakeLists.txt  install_deps_debian.sh
extended-tools/state-machine/doc/: README.md  graphs.statemachine.excalidraw
extended-tools/state-machine/include/Coyot3pp/StateMachin3/: StateMachin3.hpp  state_machine_macros.hpp
extended-tools/state-machine/src/Coyot3pp/: scrach.cpp
extended-tools/state-machine/src/Coyot3pp/StateMachine/: StateMachin3.cpp
minimal-examples/: scrach.cpp
minimal-examples/Cor3/: hello-world.cpp  model-class-macros.cpp  module-class-example.cpp  value-example.cpp
minimal-examples/H264Rtsp/: h264-rtsp-min-example.cpp
minimal-examples/Imag3/: imag3_lib_example.cpp
minimal-examples/LwsServ3r/: lws-server-wrapper-for-rest-server-example.cpp
minimal-examples/LwsServ3r/www/: 404.html  index.html  script.js
minimal-examples/Mqtt/: mqtt_client_example.cpp  mqtt_client_v2_example.cpp  simple_broker.sh
minimal-examples/Qsqlit3/: qsqlite_connector_example.cpp  qsqlite_connector_example.hpp  qsqlite_example_main.cpp  scrach.cpp
minimal-examples/Qsqlite/: qsqlite_connector_example.cpp  qsqlite_connector_example.hpp
minimal-examples/R3st/: rest_client_example.cpp
minimal-examples/Sqlit3/: sqlit3_example.cpp  sqlit3_macro_classes.cpp  sqlit3_macro_classes.hpp  sqlit3_macros_example.cpp  sqlit3_macros_example_1.cpp  sqlit3_macros_example_2.cpp
minimal-examples/StateMachin3/: Camera.cpp  Camera.hpp
ros/ros2/include/Coyot3pp/Ros2/: Ros2DiagnosticsBook.hpp  Ros2NodeInterfaceHelpers.hpp  Ros2NodeIterfaceBase.hpp  ros2_wrappers.hpp
ros/ros2/src/Coyot3pp/Ros2/: Ros2DiagnosticsBook.cpp  Ros2NodeInterfaceBase.cpp  Ros2NodeInterfaceHelpers.cpp  ros2_wrappers.cpp
services/rest_server/: CMakeLists-debian.cmake  CMakeLists.txt
services/websocket_server/: CMakeLists-debian.cmake  CMakeLists.txt
services/websocket_server/doc/: README.md
(+77 files in other folders)
